alerting-service/k8/k8.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: alerting
  labels:
    app: alerting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alerting
  template:
    metadata:
      labels:
        app: alerting
    spec:
      serviceAccountName: alerting
      containers:
      - name: alerting
        image: registry.cloud.sdu.dk/sdu-cloud/alerting-service:1.1.17
        livenessProbe:
          httpGet:
            port: 8080
            path: /status
          initialDelaySeconds: 3
          periodSeconds: 30
          failureThreshold: 5
        command:
        - /opt/service/bin/service
        - --config-dir
        - /etc/refresh-token
        - --config-dir
        - /etc/token-validation
        - --config-dir
        - /etc/alerting
        - --config-dir
        - /etc/elasticsearch-credentials
        volumeMounts:
        - mountPath: /etc/refresh-token
          name: refresh-token
        - mountPath: /etc/token-validation
          name: token-validation
        - mountPath: /etc/alerting
          name: alerting
        - mountPath: /etc/elasticsearch-credentials
          name: elasticsearch-credentials
      volumes:
      - name: refresh-token
        secret:
          optional: false
          secretName: alerting-refresh-token
      - name: token-validation
        configMap:
          name: token-validation
      - name: alerting
        secret:
          optional: false
          secretName: alerting-tokens
      - name: elasticsearch-credentials
        secret:
          optional: false
          secretName: elasticsearch-logging-cluster-credentials

      imagePullSecrets:
        - name: esci-docker

---
apiVersion: v1
kind: Service
metadata:
  name: alerting
spec:
  clusterIP: None
  type: ClusterIP
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: alerting
